# serde-file-value

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: de.rs  lib.rs
