[package]
name = "serde-file-value"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sfackler/serde-file-value"
description = "A Serde deserializer which transparently loads files as string values"

[dependencies]
serde = "1.0.202"

[dev-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
